app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pholsoophak-reactprojecttesting-svc
spec:
  selector:
    app: pholsoophak-reactprojecttesting
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
